; ModuleID = '/home/carl/AnghaBench/h2o/examples/libh2o/extr_websocket.c_on_accept.c'
source_filename = "/home/carl/AnghaBench/h2o/examples/libh2o/extr_websocket.c_on_accept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@accept_ctx = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @on_accept to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_accept(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %17

9:                                                ; preds = %2
  %10 = load i32*, i32** %3, align 8
  %11 = call i32* @h2o_evloop_socket_accept(i32* %10)
  store i32* %11, i32** %5, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %9
  br label %17

14:                                               ; preds = %9
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @h2o_accept(i32* @accept_ctx, i32* %15)
  br label %17

17:                                               ; preds = %14, %13, %8
  ret void
}

declare dso_local i32* @h2o_evloop_socket_accept(i32*) #1

declare dso_local i32 @h2o_accept(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
